--- a/client/src/components/RequestForm/RequestForm.module.css
+++ b/client/src/components/RequestForm/RequestForm.module.css
@@ -44,6 +44,7 @@
     max-width: 100%;
     height: 5.06rem;
     border-radius: 1.5rem;
+    background-color: white;
     font-size: 1.25rem;
     padding: 0 2rem;
 }
