--- a/client/src/components/ClassroomResource/ClassroomResource.module.css
+++ b/client/src/components/ClassroomResource/ClassroomResource.module.css
@@ -18,9 +18,12 @@
 
 .container{
     display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
     max-width: 81rem;
     flex-direction: row;
     width: 100%;
-    height: 37.50rem;
+    height: auto;
     gap: 3rem;
 }
