--- a/client/src/components/Header/Header.module.css
+++ b/client/src/components/Header/Header.module.css
@@ -2,7 +2,6 @@
     background-color: white;
     max-width: 100vw;
     height: 6rem;
-    stroke-width: 0.06rem;
     display: flex;
     align-items: center;
     padding: 0 3.5rem;
@@ -13,22 +12,17 @@
     font-weight: bold;
     font-size: 1.25rem;
     letter-spacing: 0.13rem;
-    line-height: 1.75rem;
-    height: 2.38rem;
 }
 
 .logo a{
     font-weight: bold;
 }
 
-.nav {
-    width: 40.5rem;
-}
 
 .nav ul {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: end;
     align-items: center;
     gap: 1.25rem;
 }
