--- a/client/src/components/LoginSection/LoginSection.module.css
+++ b/client/src/components/LoginSection/LoginSection.module.css
@@ -12,9 +12,16 @@
     font-size: 3rem;
     margin-bottom: 6rem;
 }
-
+.login-container form {
+    padding-left: 5rem;
+    width: 40%;
+    display: flex;
+    gap: 1.5rem;
+}
 .login-container input{
-    width: 30%;
+    padding: 0 1rem;
+    font-size: 2rem;
+    width: 80%;
     height: 4rem;
     border-radius: 1rem;
     background-color: #f5f5f5;
