--- a/client/src/components/LoginSection/LoginSection.module.css
+++ b/client/src/components/LoginSection/LoginSection.module.css
@@ -13,23 +13,22 @@
     margin-bottom: 6rem;
 }
 .login-container form {
+    flex-direction: column;
     padding-left: 5rem;
     width: 40%;
     display: flex;
     gap: 1.5rem;
-}
-.login-container input{
-    padding: 0 1rem;
-    font-size: 2rem;
-    width: 80%;
-    height: 4rem;
-    border-radius: 1rem;
-    background-color: #f5f5f5;
-    border: 0.1rem solid rgba(72, 71, 71, 0.175);
 }
 
 .login-container p{
     width: 30%;
     text-align: center;
     margin-bottom: 7rem;
+}
+
+.login-container button{
+    width: 50%;
+    align-self: center;
+    padding: 0.5rem 2rem;
+    font-size: 2rem;
 }
