--- a/client/src/pages/Interviews.module.css
+++ b/client/src/pages/Interviews.module.css
@@ -1,4 +1,40 @@
 .video-section{
     display: flex;
-    
+    position: relative;
+    overflow: hidden;  
 }
+.restricted {
+    height: 130vh;
+    overflow: hidden;
+    position: relative;
+  }
+
+  .lockPanel {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 80vh;
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(255, 255, 255, 1));
+    border: 2px solid #d10000;
+    border-radius: 10px;
+    transition: background 0.5s ease-in-out;
+    position: absolute;
+    top: 200vh;
+    left: 0;
+  }
+  
+  .lockButton {
+    padding: 10px 20px;
+    font-size: 1.2rem;
+    cursor: pointer;
+    background-color: #d10000;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+  }
+  
+  .lockButton:hover {
+    background-color: #a00000;
+  }
