--- a/client/src/components/Header/Header.module.css
+++ b/client/src/components/Header/Header.module.css
@@ -36,9 +36,12 @@
     height: 2.69rem;
     border-radius: 1.63rem;
     font-weight: bold;
+    font-size: 1rem;
+    cursor: pointer;
     display: flex;
     justify-content: center;
     align-items: center;
+    border: none;
 }
 
 .loggedInAccount{
