--- a/client/src/pages/Interviews.module.css
+++ b/client/src/pages/Interviews.module.css
@@ -11,14 +11,18 @@
 
   .lockPanel {
     display: flex;
-    padding-bottom: 2rem;
     width: 100%;
-    height: 90vh;
+    height: 70vh;
     background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.5) 20%, rgba(255, 255, 255, 0.8) 50%, rgba(255, 255, 255, 0.5) 100%);
     transition: background 0.5s ease-in-out;
     position: relative;
-    top: -40vh;
+    top: -30vh;
     left: 0;
     align-items: end;
     justify-content: end;
+  }
+
+  .restricted_cuuriculum{
+    max-height: 100vh;
+    overflow: hidden;
   }
