--- a/client/src/components/Hero/Hero.module.css
+++ b/client/src/components/Hero/Hero.module.css
@@ -24,3 +24,21 @@
     font-size: 2rem;
     width: 50%;
 }
+
+@media screen and (max-width: 900px) {
+    #hero h1{
+        font-size: 3rem;
+        width: 100%;
+        text-align: center;
+    }
+    #hero{
+        justify-content: center;
+        align-items: center;
+        padding: 0 1rem;
+    }
+    #hero p{
+        width: 100%;
+        font-size: 1.5rem;
+        text-align: center;
+    }
+}
