--- a/client/src/components/About/AboutCard.module.css
+++ b/client/src/components/About/AboutCard.module.css
@@ -27,3 +27,28 @@
     color: #d10000;
     text-decoration: underline;
 }
+@media screen and (max-width: 900px) {
+    .about{
+        padding: 0;
+        width: 100%;
+        text-align: center;
+    }
+    .about h1 {
+        font-size: 2.25rem;
+        padding: 0 2rem;
+    }
+    .about-card{
+        flex-direction: column;
+        width: 100%;
+        padding: 1.25rem 0;
+        justify-content: center;
+        align-items: center;
+    }
+    .about-image{
+        width: 100%;
+    }
+    .about-intro{
+        width: 60%;
+        
+    }
+}
