--- a/client/src/components/CurriculumHeader/CurriculumHeader.module.css
+++ b/client/src/components/CurriculumHeader/CurriculumHeader.module.css
@@ -12,3 +12,14 @@
     font-size: 6rem;
     color: #ffffff;
 }
+
+@media screen and (max-width: 900px) {
+    .curriclum{
+        padding: 2rem;
+        justify-content: center;
+    }
+    .curriclum h1{
+        font-size: 3rem;
+        text-align: center;
+    }
+}
