--- a/client/src/components/Resource/Lesson.module.css
+++ b/client/src/components/Resource/Lesson.module.css
@@ -42,3 +42,28 @@
     font-weight: bold;
     text-decoration: underline;
 }
+
+@media screen and (max-width: 700px) {
+    .lesson{
+        margin-left: 0rem;
+        flex-direction: column;
+    }
+    .lesson-header h1{
+        font-size: 2.5rem;
+    }
+    .lesson-header{
+        gap: 1rem;
+    }
+    .lesson-level{
+        align-items: start;
+    }
+    .lesson-description{
+        width: auto;
+    }
+    .lesson-description h2{
+        font-size: 1.5rem;
+    }
+    .lesson-description span{
+        align-self: center;
+    }
+}
