--- a/client/src/components/Resource/Resource.module.css
+++ b/client/src/components/Resource/Resource.module.css
@@ -24,3 +24,14 @@
 .lesson-header h1{
     font-size: 3rem;
 }
+@media screen and (max-width: 900px) {
+    .resource{
+        margin: 4rem 2.5rem;
+    }
+    .lesson-header h1{
+        font-size: 2.5rem;
+    }
+    .lesson-header{
+        gap: 1rem;
+    }
+}
