--- a/client/src/components/BrowseVideo/BrowseVideo.module.css
+++ b/client/src/components/BrowseVideo/BrowseVideo.module.css
@@ -14,7 +14,7 @@
     display: flex;
     flex-wrap: wrap;
     padding: 1rem;
-    justify-content: center;
+    justify-content: start;
     gap: 0.5rem;
     margin: 0 3rem;
     width: 90%;
