--- a/client/src/pages/Interviews.module.css
+++ b/client/src/pages/Interviews.module.css
@@ -49,7 +49,7 @@
 .mobFilterNav{
   width: 100%;
   position: absolute;
-  top: 0;
+  top: 5rem;
   right: 0;
   background-color: aqua;
   display: none;
@@ -57,6 +57,19 @@
   z-index: 10;
 }
 
+.openNav{
+  display: flex;
+  justify-content: space-between;
+  padding: 0 1.5rem;
+  align-items: center;
+
+}
+.openNav p{
+  font-size: 1.25rem;
+}
+.openNav div {
+  width: 3rem;
+}
   @media screen and (max-width: 900px) {
     .restricted {
       height: auto;
