--- a/client/src/components/BrowseVideo/VideoCard.module.css
+++ b/client/src/components/BrowseVideo/VideoCard.module.css
@@ -13,6 +13,11 @@
     height: 60%;
     background-color: #d9d9d9;
 }
+.video{
+    width: 100%;
+    margin: 0;
+    height: auto;
+}
 .card-decription h2{
     margin-top: 1.5rem;
     margin: 0;
@@ -21,4 +26,27 @@
 .card-decription p {
     margin: 0;
     font-size: 1rem;
+}
+
+.VideoModal{
+    width: 50rem;
+    margin: auto;
+    height: 85vh;
+    padding: 2rem 8.75rem;
+    background: #ffffff;
+}
+
+.VideoModal div{
+    width: 1.5rem;
+    align-self: flex-end;
+}
+
+.VideoModal h2{
+    font-size: 2rem;
+    margin: 0;
+}
+
+.VideoModal p{
+    font-size: 1rem;
+    margin: 0;
 }
