--- a/client/src/components/BrowseVideo/BrowseVideo.module.css
+++ b/client/src/components/BrowseVideo/BrowseVideo.module.css
@@ -45,3 +45,9 @@
   .pagination-controls span {
     font-size: 16px;
   }
+
+  @media screen and (max-width: 900px) {
+    .content{
+      justify-content: center;
+  }
+}
