--- a/client/src/components/BrowseVideo/VideoCard.module.css
+++ b/client/src/components/BrowseVideo/VideoCard.module.css
@@ -50,3 +50,12 @@
     font-size: 1rem;
     margin: 0;
 }
+
+@media screen and (max-width: 900px) {
+    .VideoModal{
+        width: 90%;
+        margin: auto;
+        height: 85vh;
+        padding: 2rem;
+    }
+}
