--- a/client/src/components/ClassroomResource/ResourceCard.module.css
+++ b/client/src/components/ClassroomResource/ResourceCard.module.css
@@ -10,7 +10,7 @@
     height: 53%;
     background-color: #717171;
     width: 100%;
-    border-radius: 1.5rem 1.5rem 0 0;
+    border-radius: 1.80rem 1.80rem 0 0;
 }
 .card-desc{
     padding: 0.5rem 1.5rem;
@@ -36,6 +36,7 @@
     background-color: #002473;
     color: #ffffff;
     align-self: center;
+    border: none;
 }
 
 @media screen and (max-width: 900px) {
