--- a/client/src/components/LoginHeader/LoginHeader.module.css
+++ b/client/src/components/LoginHeader/LoginHeader.module.css
@@ -12,3 +12,12 @@
     font-size: 6rem;
     color: #ffffff;
 }
+
+@media screen and (max-width: 900px) {
+    .login{
+        padding: 2rem;
+    }
+    .login h1{
+        font-size: 3rem;
+    }
+}
