--- a/client/src/components/LoginSection/LoginSection.module.css
+++ b/client/src/components/LoginSection/LoginSection.module.css
@@ -32,3 +32,20 @@
     padding: 0.5rem 2rem;
     font-size: 2rem;
 }
+
+@media screen and (max-width: 900px) {
+    .login-container{
+        padding: 2rem;
+    }
+    .login h1{
+        font-size: 1.75rem;
+    }
+    .login-container form{
+        padding: 1rem;
+        width: 80%;
+    }
+    .login-container p{
+        width: 50%;
+        margin-bottom: 7rem;
+    }
+}
