--- a/client/src/components/BrowseVideo/BrowseVideo.module.css
+++ b/client/src/components/BrowseVideo/BrowseVideo.module.css
@@ -20,31 +20,14 @@
     width: 90%;
 }
 
-.pagination-controls {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 1rem auto;
-  }
-  
-  .pagination-controls button {
-    padding: 8px 16px;
-    margin: 0 10px;
-    background-color: #007bff;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-  }
-  
-  .pagination-controls button:disabled {
-    background-color: #ccc;
-    cursor: not-allowed;
-  }
-  
-  .pagination-controls span {
-    font-size: 16px;
-  }
+.load-more-controls{
+  width: 100%;
+  text-align: center;
+  border-top: 0.2rem solid #d9d9d9;
+  padding: 0.5rem;
+  cursor: pointer;
+  margin-bottom: 20rem;
+}
 
   @media screen and (max-width: 900px) {
     .content{
