--- a/client/src/components/BrowseVideo/VideoCard.module.css
+++ b/client/src/components/BrowseVideo/VideoCard.module.css
@@ -1,61 +1,87 @@
-.card-container{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    width: 49%;
-    height: 28.5rem;
-    margin: 0;
-    width: 30rem;
+.card-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 49%;
+  height: 28.5rem;
+  margin: 0;
+  width: 30rem;
 }
-.img{
-    width: 100%;
-    margin: 0;
-    height: 60%;
-    background-color: #d9d9d9;
+.img {
+  width: 100%;
+  margin: 0;
+  height: 100%;
+  background-color: #d9d9d9;
 }
-.video{
-    width: 100%;
-    margin: 0;
-    height: auto;
+.video {
+  width: 100%;
+  margin: 0;
+  height: auto;
 }
-.card-decription h2{
-    margin-top: 1.5rem;
-    margin: 0;
-    font-size: 1.5rem;
+.card-decription h2 {
+  margin-top: 1.5rem;
+  margin: 0;
+  font-size: 1.5rem;
 }
 .card-decription p {
-    margin: 0;
-    font-size: 1rem;
+  margin: 0;
+  font-size: 1rem;
 }
 
-.VideoModal{
-    width: 50rem;
-    margin: auto;
-    height: 85vh;
-    padding: 2rem 8.75rem;
-    background: #ffffff;
+.VideoModal {
+  width: 50rem;
+  margin: auto;
+  height: 85vh;
+  padding: 2rem 8.75rem;
+  background: #ffffff;
 }
 
-.VideoModal div{
-    width: 1.5rem;
-    align-self: flex-end;
+.VideoModal div {
+  width: 1.5rem;
+  align-self: flex-end;
 }
 
-.VideoModal h2{
-    font-size: 2rem;
-    margin: 0;
+.VideoModal h2 {
+  font-size: 2rem;
+  margin: 0;
 }
 
-.VideoModal p{
-    font-size: 1rem;
-    margin: 0;
+.VideoModal p {
+  font-size: 1rem;
+  margin: 0;
 }
+
+.thumbnail-container {
+  width: 100%;
+  background-color: antiquewhite;
+  position: relative;
+  cursor: pointer;
+  height: 60%;
+}
+
+.play-button {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 10rem; 
+  height: 10rem; 
+  background: url("../../assets/playbutton.svg") no-repeat center center;
+  background-size: contain;
+  transform: translate(-50%, -50%);
+  opacity: 1; 
+  transition: opacity 0.3s ease;
+}
+
+.thumbnail-container:hover {
+    box-shadow: 0 4px 8px 0 #7c7a7a; 
+  }
 
 @media screen and (max-width: 900px) {
-    .VideoModal{
-        width: 90%;
-        margin: auto;
-        height: 85vh;
-        padding: 2rem;
-    }
+  .VideoModal {
+    width: 90%;
+    overflow-x: hidden;
+    margin: auto;
+    height: 85vh;
+    padding: 1rem;
+  }
 }
