--- a/client/src/components/ClassroomResource/ClassroomResource.module.css
+++ b/client/src/components/ClassroomResource/ClassroomResource.module.css
@@ -11,7 +11,7 @@
 .paragraph{
     font-size: 1.25rem;
     margin: 4.8rem auto;
-    text-align: left;
+    text-align: center;
     max-width: 42.19rem;
     margin-bottom: 4rem;
 }
@@ -21,7 +21,6 @@
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    max-width: 81rem;
     flex-direction: row;
     width: 100%;
     height: auto;
