--- a/client/src/components/CurriculumHeader/CurriculumHeader.module.css
+++ b/client/src/components/CurriculumHeader/CurriculumHeader.module.css
@@ -1,25 +1,39 @@
-.curriclum{
-    max-width: 100vw;
-    height: 31.25rem;
-    background-image: url('../../assets/curriculum.png');
-    background-size: cover;
-    padding: 6.25rem;
-    display: flex;
-    align-items: center;
+.curriclum {
+  max-width: 100vw;
+  min-height: 31.25rem;
+  height: auto;
+  background-image: url("../../assets/curriculum.png");
+  background-size: cover;
+  padding: 6.25rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
-.curriclum h1{
-    font-size: 6rem;
-    color: #ffffff;
+.curriclum h1 {
+  font-size: 6rem;
+  color: #ffffff;
+  margin: 0;
+}
+
+.curriclum p {
+  color: white;
+  margin: none;
+  font-size: 1.25rem;
+  width: 50%;
 }
 
 @media screen and (max-width: 900px) {
-    .curriclum{
-        padding: 2rem;
-        justify-content: center;
-    }
-    .curriclum h1{
-        font-size: 3rem;
-        text-align: center;
-    }
+  .curriclum {
+    padding: 2rem;
+    justify-content: center;
+  }
+  .curriclum h1 {
+    font-size: 3rem;
+    text-align: center;
+  }
+  .curriclum p{
+    width: 100%;
+    text-align: center;
+  }
 }
