--- a/client/src/components/LoginSection/LoginSection.module.css
+++ b/client/src/components/LoginSection/LoginSection.module.css
@@ -13,39 +13,54 @@
     margin-bottom: 6rem;
 }
 .login-container form {
-    flex-direction: column;
-    padding-left: 5rem;
-    width: 40%;
     display: flex;
+    gap: 1.5rem;
+    align-items: start;
+    width: 27rem;
+}
+.inputs{
+    display: flex;
+    flex-direction: column;
+    width: 90%;
     gap: 1.5rem;
 }
 
-.login-container p{
-    width: 30%;
+.inputs p{
     text-align: center;
-    margin-bottom: 7rem;
+    margin-bottom: 5rem;
 }
 
-.login-container button{
-    width: 50%;
-    align-self: center;
-    padding: 0.5rem 2rem;
+.login-container img{
+    margin-top: 3rem;
+    background-color: none;
+    width: 4rem;
     font-size: 2rem;
+}
+.error{
+    color: #d40000;
+    margin: 1rem;
 }
 
 @media screen and (max-width: 900px) {
     .login-container{
         padding: 2rem;
     }
-    .login h1{
+    .login-container h1{
         font-size: 1.75rem;
     }
     .login-container form{
+        flex-direction: column;
         padding: 1rem;
-        width: 80%;
+        width: 90%;
+    }
+    .inputs{
+        width: 100%;
+    }
+    .login-container img{
+        justify-self: center;
+        align-self: center;
     }
     .login-container p{
-        width: 50%;
-        margin-bottom: 7rem;
+        margin-bottom: 0rem;
     }
 }
