--- a/client/src/components/VideoNav/VideoNav.module.css
+++ b/client/src/components/VideoNav/VideoNav.module.css
@@ -30,6 +30,33 @@
     font-size: 1.25rem;
     align-self: center;
 }
+
+input[type="checkbox"] {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;   
+    background-color: transparent;   
+    border: 0.2rem solid #ffffff;   
+    padding: 0.3rem;            
+    width: 1.90rem;      
+    height: 1.90rem;    
+    cursor: pointer; 
+}
+
+input[type="checkbox"]:checked {
+    background-color: transparent; 
+    border: 0.2rem solid #ffffff;
+}
+
+input[type="checkbox"]:checked::before {
+    content: '✓';             
+    color: white;             
+    font-size: 1.5rem;          
+    display: block;
+    text-align: center;
+    line-height: 16px;        
+}
+
 @media screen and (max-width: 900px) {
     .sideFilter{
         width: 100vw;
