--- a/client/src/pages/pages.module.css
+++ b/client/src/pages/pages.module.css
@@ -21,22 +21,34 @@
 #hero p {
   color: white;
   margin: none;
-  font-size: 2rem;
+  font-size: 1.25rem;
   width: 50%;
 }
 
 .interview {
   max-width: 100vw;
-  height: 31.25rem;
-  background-color: #585858;
-  padding: 6.25rem;
+  min-height: 31.25rem;
+  height: auto;
+  background-image: url("../assets/elderly.png");
+  background-size: cover;
+  margin: none;
   display: flex;
-  align-items: center;
+  padding: 6.25rem;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .interview h1 {
   font-size: 6rem;
+  margin: 0;
   color: #ffffff;
+}
+
+.interview p{
+  color: white;
+  margin: none;
+  font-size: 1.25rem;
+  width: 50%;
 }
 
 .video-section {
@@ -125,6 +137,7 @@
     justify-content: center;
     align-items: center;
     padding: 0 1rem;
+    padding-bottom: 3rem;
   }
   #hero p {
     width: 100%;
@@ -151,6 +164,10 @@
   }
   .interview h1 {
     font-size: 3rem;
+    text-align: center;
+  }
+  .interview p{
+    width: 100%;
     text-align: center;
   }
 }
