--- a/client/src/components/CurriculumHeader/CurriculumHeader.module.css
+++ b/client/src/components/CurriculumHeader/CurriculumHeader.module.css
@@ -2,7 +2,7 @@
   max-width: 100vw;
   min-height: 31.25rem;
   height: auto;
-  background-image: url("../../assets/curriculum.png");
+  background-image: url("../../assets/curriculum.webp");
   background-size: cover;
   padding: 6.25rem;
   display: flex;
