--- a/client/src/components/BrowseVideo/VideoCard.module.css
+++ b/client/src/components/BrowseVideo/VideoCard.module.css
@@ -18,6 +18,14 @@
   margin: 0;
   height: auto;
 }
+.card-decription{
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  min-height: 12rem;
+  /* align-items: stretch; */
+  padding: 1rem 0;
+}
 .card-decription h2 {
   margin-top: 1.5rem;
   margin: 0;
@@ -26,6 +34,9 @@
 .card-decription p {
   margin: 0;
   font-size: 1rem;
+}
+.card-decription i {
+  font-weight: 600;
 }
 
 .VideoModal {
