--- a/client/src/components/LoginHeader/LoginHeader.module.css
+++ b/client/src/components/LoginHeader/LoginHeader.module.css
@@ -1,7 +1,7 @@
 .login{
     max-width: 100vw;
     height: 18.75rem;
-    background-image: url('../../assets/login.png');
+    background-image: url('../../assets/login.webp');
     background-size: cover;
     padding: 6.25rem;
     display: flex;
