--- a/client/src/pages/pages.module.css
+++ b/client/src/pages/pages.module.css
@@ -29,7 +29,7 @@
   max-width: 100vw;
   min-height: 31.25rem;
   height: auto;
-  background-image: url("../assets/elderly.png");
+  background-image: url("../assets/elderly.webp");
   background-size: cover;
   margin: none;
   display: flex;
@@ -57,7 +57,6 @@
   overflow: hidden;
 }
 .restricted {
-  height: 137vh;
   overflow: hidden;
   position: relative;
 }
@@ -66,7 +65,7 @@
   font-size: 1rem;
   font-weight: bold;
   width: 100vw;
-  background-color: #002473;
+  background-color: #001239;
   color: #ffffff;
   display: none;
   cursor: pointer;
