--- a/client/src/UI/AccessButton.module.css
+++ b/client/src/UI/AccessButton.module.css
@@ -1,3 +1,8 @@
+.linkAccess{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
 .access-btn{
     margin: 0 auto;
     width: 26.25rem;
