--- a/client/src/components/About/AboutCard.module.css
+++ b/client/src/components/About/AboutCard.module.css
@@ -15,14 +15,19 @@
 }
 .about-image{
     width: 50%;
-    height: 18.06rem;
-    background-color: #d9d9d9;
+    height: 22rem;
+    object-fit: cover;
 }
 .about-intro{
     width: 50%;
     display: flex;
     justify-content: start;
+    font-size: 1.25rem;
     flex-direction: column;
+    padding-top: 0;
+}
+.about-intro p{
+    margin-top: 0;
 }
 .about-link{
     color: #d10000;
