--- a/client/src/components/BrowseVideo/BrowseVideo.module.css
+++ b/client/src/components/BrowseVideo/BrowseVideo.module.css
@@ -9,15 +9,27 @@
     display: flex;
     text-align: center;
     font-size: 3rem;
+    margin-bottom: 0;
+}
+.paragraph{
+    display: flex;
+    text-align: center;
+    width: 35%;
+    margin: 0;
+    margin-bottom: 5rem;
+    font-size: 1.25rem;
 }
 .content{
     display: flex;
     flex-wrap: wrap;
     padding: 1rem;
-    justify-content: start;
-    gap: 0.5rem;
-    margin: 0 3rem;
-    width: 90%;
+    gap: 1.5rem;
+    justify-content: space-evenly;
+    width: 95%;
+}
+
+.loggedOut{
+  width: 85%;
 }
 
 .load-more-controls{
@@ -33,4 +45,7 @@
     .content{
       justify-content: center;
   }
+  .paragraph{
+    width: 80%;
+}
 }
