--- a/client/src/components/BrowseVideo/VideoCard.module.css
+++ b/client/src/components/BrowseVideo/VideoCard.module.css
@@ -2,10 +2,10 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  width: 49%;
-  height: 28.5rem;
+  width: 48%;
+  min-height: 28.5rem;
   margin: 0;
-  width: 30rem;
+  max-width: 30rem;
 }
 .img {
   width: 100%;
@@ -68,6 +68,7 @@
   position: relative;
   cursor: pointer;
   height: 60%;
+  max-height: 16.56rem;
 }
 
 .play-button {
@@ -94,5 +95,9 @@
     margin: auto;
     height: 85vh;
     padding: 1rem;
+  }
+  .card-container {
+    width: 90%;
+    max-width: 30rem;
   }
 }
