--- a/client/src/components/ClassroomResource/ClassroomResource.module.css
+++ b/client/src/components/ClassroomResource/ClassroomResource.module.css
@@ -12,7 +12,7 @@
     font-size: 1.25rem;
     margin: 4.8rem auto;
     text-align: center;
-    max-width: 42.19rem;
+    width: 70%;
     margin-bottom: 4rem;
 }
 
