--- a/client/src/components/Footer/Footer.module.css
+++ b/client/src/components/Footer/Footer.module.css
@@ -29,7 +29,7 @@
     display: flex;
     justify-content: center;
     background-color: #e5f7ff;
-    align-items: self-start;
+    align-items: center;
 }
 
 .outer-div{
