--- a/client/src/components/Resource/Lesson.module.css
+++ b/client/src/components/Resource/Lesson.module.css
@@ -10,6 +10,7 @@
     display: flex;
     flex-direction: column;
     align-items: end;
+    margin-top: 0.5rem;
 }
 .lesson-level h4{
     font-size: 1rem;
