--- a/client/src/components/VideoNav/VideoNav.module.css
+++ b/client/src/components/VideoNav/VideoNav.module.css
@@ -6,6 +6,7 @@
 }
 
 .topic-filter, .speaker-filter{
+    padding-top: 1rem;
     padding: 2rem;
 }
 
@@ -17,13 +18,14 @@
     display: flex;
     align-items: start;
     gap: 1rem;
+    padding-left: 2rem;
     margin-bottom: 1rem;
 }
 
 .topic-filter input, .speaker-filter input{
     padding-left: 2rem;
     height: 1.88rem;
-    min-width: 10%;
+    min-width: 15%;
     color: #002473;
 }
 .topic-filter label, .speaker-filter label{
@@ -70,9 +72,51 @@ input[type="checkbox"]:checked::before {
     align-items: center;
     font-size: 1.25rem;
     background-color: #002473;
+    margin: 0;
+}
+
+.search-bar{
+    display: flex;
+    padding-top: 2.5rem;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
+.searchInput input{
+    width: 65%;
+    padding: 1rem 2rem;
+    font-size: 1rem;
+    border-radius: 2.25rem;
+    padding-left: 4rem;
+    border: none;
+}
+
+.searchInput{
+    position: relative;
+    padding: 0 1rem;
+    width: 100%;
+    border: none;
+}
+.searchButton{
+    position: absolute;
+    background: none;
+    border: none;
+    left: 1.5rem;
+    cursor: pointer;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.searchButton img{
+    width: 1.8rem;
 }
 @media screen and (max-width: 900px) {
     .sideFilter{
         width: 100vw;
+    }
+    .topic-filter input, .speaker-filter input{
+        min-width: 1.9rem;;
+        min-height: 1.9rem;
     }
 }
