--- a/client/src/pages/pages.module.css
+++ b/client/src/pages/pages.module.css
@@ -1,8 +1,10 @@
 #hero {
   height: auto;
-  min-height: 100vh;
-  background-image: url("../assets/hero.png");
+  min-height: 94vh;
+  background: linear-gradient(#002473CC, #002473CC),  url("../assets/home1.jpg");
   background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
   margin: none;
   display: flex;
   padding-left: 6.25rem;
@@ -16,6 +18,7 @@
   width: 60%;
   font-size: 6rem;
   margin: 0;
+  line-height: 1.2;
 }
 
 #hero p {
@@ -23,14 +26,17 @@
   margin: none;
   font-size: 1.25rem;
   width: 50%;
+  padding-bottom: 2rem;
 }
 
 .interview {
   max-width: 100vw;
   min-height: 31.25rem;
   height: auto;
-  background-image: url("../assets/elderly.webp");
+  background: linear-gradient(#002473CC, #002473CC),  url("../assets/elderly1.jpg");
   background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
   margin: none;
   display: flex;
   padding: 6.25rem;
