--- a/client/src/UI/AccessButton.module.css
+++ b/client/src/UI/AccessButton.module.css
@@ -1,7 +1,8 @@
 .linkAccess{
     display: flex;
     justify-content: center;
-    width: 100%;
+    width: fit-content;
+    margin: 0 auto;
 }
 .access-btn{
     margin: 0 auto;
