--- a/client/src/components/CurriculumHeader/CurriculumHeader.module.css
+++ b/client/src/components/CurriculumHeader/CurriculumHeader.module.css
@@ -11,11 +11,13 @@
   flex-direction: column;
   justify-content: center;
   margin-bottom: 0;
+  position: relative;
 }
 
 .curriclum h1 {
   font-size: 6rem;
   color: #ffffff;
+  font-family: 'Zilla Slab', sans-serif;
   margin: 0;
 }
 
