--- a/client/src/components/Header/Header.module.css
+++ b/client/src/components/Header/Header.module.css
@@ -12,6 +12,7 @@
     font-weight: bold;
     font-size: 1.25rem;
     letter-spacing: 0.13rem;
+    font-family: 'Zilla Slab', sans-serif;
 }
 
 .logo a{
@@ -43,6 +44,9 @@
     align-items: center;
     border: none;
 }
+.stayLoggedIn{
+    background-color: #ffffff;
+}
 
 .loggedInAccount{
     background-color: #4ecf00;
@@ -65,8 +69,8 @@
 }
 
 .navMenu{
-    position: absolute;
-    top: 5rem;
+    position: fixed;
+    top: 0rem;
     right: 0rem;
     z-index: 2;
     display: flex;
@@ -74,16 +78,18 @@
     justify-content: center;
     background-color: rgb(255,255,255, 0.9);
     padding: 0rem;
-    height: calc(100vh - 6rem);
+    height: 100vh;
     width: 100%;
     border-radius: 1rem;
+    background-color: #001239;
+    transition: top 0.3s ease;
 }
 .navMenu li{
     list-style-type: none;
-    font-size: 1rem;
-    height: 4rem;
+    font-size: 1.5rem;
+    text-align: center;
     margin: 0;
-    background-color: white;
+    color: #ffffff;
     padding: 1rem 0.5rem;
 }
 
@@ -93,11 +99,19 @@
     padding: 1rem 0.5rem;
     border: none;
 }
+.login-btn-mobile{
+    width: 40%;
+    border-radius: 1.63rem;
+    align-self: center;
+    font-size: 1.5rem;
+    margin-top: 2rem;
+}
 
 .logout-modal{
     max-width: fit-content;
     width: 30%;
     padding: 1rem 7rem;
+    font-size: 2rem;
     top: 10vh;
     margin: auto;
     max-height: fit-content;
@@ -131,7 +145,7 @@
 .controls button{
     padding: 1rem 2rem;
     border-radius: 1.63rem;
-    border: 0.1rem  solid #4ecf00;
+    border: 0.2rem  solid #4ecf00;
     font-weight: bold;
     font-size: 1rem;
     cursor: pointer;
@@ -139,7 +153,13 @@
     justify-content: center;
     align-items: center;
 }
-
+.cancel-btn{
+    position: absolute;
+    top: 2rem;
+    right: 2rem;
+    width: 4rem;
+    color: #ffffff;
+}
 @media screen and (max-width: 900px) {
     .mobMenu{
         display: flex;
