--- a/client/src/components/LoginSection/LoginSection.module.css
+++ b/client/src/components/LoginSection/LoginSection.module.css
@@ -11,6 +11,7 @@
     text-align: center;
     font-size: 3rem;
     margin-bottom: 6rem;
+    font-family: 'Zilla Slab', sans-serif;
 }
 .login-container form {
     display: flex;
