--- a/client/src/pages/pages.module.css
+++ b/client/src/pages/pages.module.css
@@ -10,6 +10,7 @@
   padding-left: 6.25rem;
   padding-bottom: 4rem;
   flex-direction: column;
+  position: relative;
 }
 
 #hero h1 {
@@ -19,6 +20,7 @@
   font-size: 6rem;
   margin: 0;
   line-height: 1.2;
+  font-family: 'Zilla Slab', sans-serif;
 }
 
 #hero p {
@@ -41,6 +43,7 @@
   display: flex;
   padding: 6.25rem;
   flex-direction: column;
+  position: relative;
   justify-content: center;
 }
 
@@ -48,6 +51,7 @@
   font-size: 6rem;
   margin: 0;
   color: #ffffff;
+  font-family: 'Zilla Slab', sans-serif;
 }
 
 .interview p{
@@ -132,6 +136,77 @@
 .openNav div {
   width: 3rem;
 }
+
+.admin-Hero{
+  position: relative;
+}
+
+.admin {
+  max-width: 100vw;
+  height: 18.75rem;
+  background: linear-gradient(#002473cc, #002473cc),
+    url("../assets/login1.jpg");
+  background-size: cover;
+  background-position:bottom;
+  background-repeat: no-repeat;
+  padding: 6.25rem;
+  display: flex;
+  align-items: center;
+}
+
+.admin h1 {
+  font-size: 6rem;
+  color: #ffffff;
+  font-family: 'Zilla Slab', sans-serif;
+}
+
+.manage-user{
+  padding: 3rem 6rem;
+}
+
+.manage-user h1{
+  font-size: 3rem;
+  letter-spacing: 0.13rem;
+  font-family: 'Zilla Slab', sans-serif;
+}
+.admin-unaccessed{
+  display: none;
+  height: 70vh;
+  width: 100%;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.terms {
+  max-width: 100vw;
+  height: 18.75rem;
+  background: linear-gradient(#002473cc, #002473cc),
+    url("../assets/login1.jpg");
+  background-size: cover;
+  background-position:top;
+  background-repeat: no-repeat;
+  padding: 6.25rem;
+  display: flex;
+  align-items: center;
+}
+
+.terms h1 {
+  font-size: 6rem;
+  color: #ffffff;
+  font-family: 'Zilla Slab', sans-serif;
+}
+
+.terms-content{
+  margin: 5rem 7rem;
+  min-height: 200vh;
+  font-size: 2rem;
+}
+.terms-content h2{
+  font-size: 3rem;
+  font-family: 'Zilla Slab', sans-serif;
+}
+
 @media screen and (max-width: 900px) {
   #hero h1 {
     font-size: 3rem;
@@ -174,5 +249,26 @@
   .interview p{
     width: 100%;
     text-align: center;
+  }
+  .admin {
+    padding: 2rem;
+  }
+  .admin h1 {
+    font-size: 3rem;
+  }
+  .admin-access{
+    display: none;
+  }
+  .admin-unaccessed{
+    display: flex;
+  }
+  .terms {
+    padding: 2rem;
+  }
+  .terms h1 {
+    font-size: 3rem;
+  }
+  .terms-content{
+    margin: 2rem;
   }
 }
