--- a/client/src/components/EditingTable/Table.module.css
+++ b/client/src/components/EditingTable/Table.module.css
@@ -2,9 +2,12 @@
     width: 100%;
     border-collapse: collapse;
 }
+.table th{
+    background-color: #0000001A;
+}
 .table th, td {
     border: 1px solid #000000;
-    padding: 0.5rem 1rem;
+    padding: 1rem 1rem;
 }
 
 .remove{
