--- a/client/src/components/Users/Manage/Table.module.css
+++ b/client/src/components/Users/Manage/Table.module.css
@@ -2,6 +2,9 @@ table{
     width: 100%;
     border-collapse: collapse;
 }
+.table th{
+    background-color: #0000001A;
+}
 .table th, td {
     border: 1px solid #000000;
     padding: 0.5rem 1rem;
