--- a/client/src/pages/pages.module.css
+++ b/client/src/pages/pages.module.css
@@ -178,6 +178,36 @@
   justify-content: center;
 }
 
+.resources {
+  max-width: 100vw;
+  min-height: 31.25rem;
+  height: auto;
+  background: linear-gradient(#002473CC, #002473CC),  url("../assets/resources1.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  margin: none;
+  display: flex;
+  padding: 6.25rem;
+  flex-direction: column;
+  position: relative;
+  justify-content: center;
+}
+
+.resources h1 {
+  font-size: 6rem;
+  margin: 0;
+  color: #ffffff;
+  font-family: 'Zilla Slab', sans-serif;
+}
+
+.resources p{
+  color: white;
+  margin: none;
+  font-size: 1.25rem;
+  width: 50%;
+}
+
 .terms {
   max-width: 100vw;
   height: 18.75rem;
@@ -270,5 +300,16 @@
   }
   .terms-content{
     margin: 2rem;
+  }
+  .resources {
+    padding: 2rem;
+  }
+  .resources h1 {
+    font-size: 3rem;
+    text-align: center;
+  }
+  .resources p{
+    width: 100%;
+    text-align: center;
   }
 }
