--- a/client/src/components/About/AboutCard.module.css
+++ b/client/src/components/About/AboutCard.module.css
@@ -35,6 +35,7 @@
     color: #d10000;
     text-decoration: underline;
     cursor: pointer;
+    margin-bottom: 0.5rem;
 }
 @media screen and (max-width: 900px) {
     .about{
