--- a/client/src/components/BrowseVideo/VideoCard.module.css
+++ b/client/src/components/BrowseVideo/VideoCard.module.css
@@ -40,17 +40,22 @@
 }
 
 .VideoModal {
+  height: fit-content;
+}
+.modal-content{
   width: 50rem;
   margin: auto;
   height: 85vh;
-  padding: 2rem 8.75rem;
+  padding: 1rem 8.75rem;
   background: #ffffff;
+  color: #000000;
 }
-
-.VideoModal div {
-  width: 1.5rem;
+.cancel-btn{
+  width: 3rem;
+  cursor: pointer;
   align-self: flex-end;
 }
+
 
 .VideoModal h2 {
   font-size: 2rem;
