--- a/client/src/components/EditingTable/Table.module.css
+++ b/client/src/components/EditingTable/Table.module.css
@@ -42,7 +42,9 @@
     color: #000000;
     font-family: 'Roboto', sans-serif;;
 }
-
+.textarea{
+    background-color: #0000001A;
+}
 .successModal{
     padding: 3rem 5rem;
     display: flex;
@@ -82,6 +84,7 @@
 .remove-modal p{
     text-align: center;
     margin: 0;
+    margin-top: 1rem;
     margin-bottom: 5rem;
 }
 .action-buttons{
@@ -106,6 +109,34 @@
     cursor: pointer;
     border-radius: 2.70rem;
     border: 0.2rem solid #d10000;
+}
+.select-container{
+    width: 10rem;
+    position: relative;
+    display: inline-block;
+}
+.select{
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    background: #fff;
+    border: none;
+    font-size: 1rem;
+    width: 100%;
+    background-image: url('../../assets/exapnd.svg'); 
+    background-repeat: no-repeat;
+    background-position: right 0.5rem center; 
+    background-size: 1rem 1rem;
+}
+.table-heading{
+    display: flex;
+    justify-content: center;
+    position: relative;
+}
+.table-heading img{
+    position: absolute;
+    right: 0rem;
+    cursor: pointer;
 }
 /* .table-head{
     
