--- a/client/src/components/Header/Header.module.css
+++ b/client/src/components/Header/Header.module.css
@@ -125,6 +125,7 @@
     font-size: 1.5rem;
     margin: 0;
     margin-top: 4rem;
+    color: #000000;
 }
 
 .logout-modal p{
@@ -133,6 +134,7 @@
     margin-top: 1rem;
     margin-bottom: 5rem;
     text-align: center;
+    color: #000000;
 }
 
 .controls{
