--- a/client/src/components/RequestForm/RequestForm.module.css
+++ b/client/src/components/RequestForm/RequestForm.module.css
@@ -73,6 +73,9 @@
     border: none;
     align-self:last baseline;
 }
+.submit-btn:hover{
+    background-color: #910101;
+}
 
 @media screen and (max-width: 900px) {
     #request-access{
