--- a/client/src/UI/Input.module.css
+++ b/client/src/UI/Input.module.css
@@ -1,9 +1,14 @@
 .input{
     padding: 0 1rem;
-    font-size: 2rem;
+    font-size: 1rem;
+    width: 90%;
     height: 4rem;
     border-radius: 1rem;
     background-color: #f5f5f5;
     border: 0.1rem solid rgba(72, 71, 71, 0.175);
     color: #000000;
+}
+.input:-webkit-autofill {
+    background-color: white !important;
+    -webkit-text-fill-color: #000000 !important;
 }
