--- a/client/src/components/LoginSection/LoginSection.module.css
+++ b/client/src/components/LoginSection/LoginSection.module.css
@@ -37,11 +37,177 @@
     width: 4rem;
     font-size: 2rem;
     cursor: pointer;
+    transition: transform 0.3s ease-out;
+}
+.login-container img:hover{
+    transform: translateX(1rem);
 }
 .error{
     color: #d40000;
     margin: 1rem;
 }
+.forgot-pass{
+    color: #d40000;
+    cursor: pointer;
+    text-decoration: underline;
+}
+
+.reset-email-modal{
+    max-width: fit-content;
+    width: 40%;
+    padding: 3rem 7rem;
+    top: 10vh;
+    margin: auto;
+    max-height: fit-content;
+    background: #ffffff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.reset-email-modal h2{
+    font-size: 1.5rem;
+    text-align: center;
+    margin: 0;
+    margin-top: 1rem;
+}
+
+.reset-email-modal p{
+    text-align: center;
+    font-size: 1rem;
+    margin: 0;
+    margin-top: 1rem;
+    margin-bottom: 2rem;
+}
+.reset-email-modal label{
+    font-weight: bold;
+    margin-left: 1rem;
+    margin-bottom: 0.5rem;
+}
+.action-buttons{
+    margin-top: 3rem;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 1rem;
+}
+
+.cancel-btn{
+    background-color: #ffffff;
+    color: #000000;
+    padding: 1rem 2rem;
+}
+
+.reset-email-btn{
+    background-color: #d10000;
+    color: #ffffff;
+    padding: 1rem 1rem;
+}
+
+.action-buttons button{
+    font-size: 1rem;
+    border: none;
+    cursor: pointer;
+    border-radius: 2.70rem;
+    border: 0.2rem solid #d10000;
+}
+
+.reset-pass-email{
+    text-align: center;
+    margin-top: 0rem;
+    width: 30vw;
+}
+
+.error{
+    color: #d10000;
+    margin: 0rem;
+    align-self: center;
+  }
+  
+.success{
+    color: #4ecf00;
+    margin: 0rem;
+    align-self: center;
+  }
+
+.terms-modal{
+    padding: 3rem 7rem;
+    max-width: 31rem;
+    color: #000000;
+    background-color: #ffffff;
+}
+.terms div{
+    height: 2px;
+    background-color: #d10000;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+}
+.terms h2{
+    font-size: 1.5rem;
+}
+.agreementForm{
+    width: 45%;
+    align-self: flex-end;
+    text-align: right;
+}
+
+.agreementForm div{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-self: start;
+    margin-bottom: 2rem;
+
+}
+
+.agreementForm button{
+    font-size: 1rem;
+    border: none;
+    cursor: pointer;
+    border-radius: 2.70rem;
+    border: 0.2rem solid #d10000;
+    background-color: #d10000;
+    color: #ffffff;
+    padding: 1rem 2rem;
+}
+
+.agreementForm input{
+    background-color: #000000;
+}
+
+.agreementForm input[type="checkbox"] {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;   
+    background-color: transparent;   
+    border: 0.2rem solid #d10000;       
+    min-width: 2rem;      
+    height: 2rem;    
+    cursor: pointer;
+    position: relative;
+}
+
+.agreementForm input[type="checkbox"]:checked {
+    background-color: transparent; 
+    border: 0.2rem solid #d10000;
+}
+
+.agreementForm input[type="checkbox"]:checked::before {
+    content: '✓';             
+    color: #d10000;             
+    font-size: 1.5rem;          
+    display: block;
+    text-align: center;
+    line-height: 2rem;
+    position: absolute;        
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+/* .terms-modal{
+    width: ;
+} */
 
 @media screen and (max-width: 900px) {
     .login-container{
@@ -64,5 +230,23 @@
     }
     .login-container p{
         margin-bottom: 0rem;
+    }
+    .reset-email-modal{
+        height: 60vh;
+        width: 90%;
+        padding: 1rem 1rem;
+    }
+    .reset-email-modal h2{
+        margin-top: 0rem;
+        width: 100%;
+    }
+    .reset-pass-email{
+        width: 100%;
+    }
+    .terms-modal{
+        padding: 2rem 2rem;
+    }
+    .agreementForm{
+        width: 65%;
     }
 }
