more changes done

--- a/client/src/components/LoginSection/LoginSection.module.css
+++ b/client/src/components/LoginSection/LoginSection.module.css
@@ -249,4 +249,8 @@
     .agreementForm{
         width: 65%;
     }
+    .reset-email-modal{
+        height: 70vh;
+        padding: 2rem 2rem;
+    }
 }
