--- a/client/src/UI/AdminBar.module.css
+++ b/client/src/UI/AdminBar.module.css
@@ -13,6 +13,14 @@
   
   .admin-notification h2{
     font-size: 1rem;
+    margin: auto 1rem;
     color: #ffffff;
     background-color: #d10000;
+    text-align: center;
+  }
+
+  @media screen and (max-width: 900px) {
+    .admin-notification{
+      display: none;
+    }
   }
