--- a/client/src/components/LoginSection/LoginSection.module.css
+++ b/client/src/components/LoginSection/LoginSection.module.css
@@ -31,7 +31,7 @@
     margin-bottom: 5rem;
 }
 
-.login-container img{
+.form-submit {
     margin-top: 3rem;
     background-color: none;
     width: 4rem;
@@ -39,7 +39,7 @@
     cursor: pointer;
     transition: transform 0.3s ease-out;
 }
-.login-container img:hover{
+.form-submit:hover{
     transform: translateX(1rem);
 }
 .error{
@@ -204,6 +204,16 @@
     left: 0;
     width: 100%;
     height: 100%;
+}
+.password-wrapper{
+    position: relative;
+}
+.toggle-password-btn{
+    position: absolute;
+    top: 50%;
+    right: 0.5rem;
+    height: 2rem;
+    transform: translateY(-50%);
 }
 /* .terms-modal{
     width: ;
